--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -574,7 +574,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody id="tBodyRowSaleOrder">
-                                                <tr>
+                                                <tr class="RowCal2">
                                                     <td>
                                                         <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                     </td>
@@ -597,7 +597,7 @@
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
-                                                <tr id="add-template3">
+                                                <tr class="RowCal2" id="add-template3">
                                                     <td>
                                                         <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                     </td>
@@ -643,7 +643,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody id="tBodyRowInvoice">
-                                                <tr>
+                                                <tr class="RowCal3">
                                                     <td>
                                                         <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                     </td>
@@ -669,7 +669,7 @@
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
-                                                <tr id="add-template4">
+                                                <tr class="RowCal3" id="add-template4">
                                                     <td>
                                                         <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                     </td>
@@ -717,7 +717,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody id="tBodyRowReceipt">
-                                                <tr>
+                                                <tr class="RowCal4">
                                                     <td>
                                                         <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                     </td>
@@ -743,7 +743,7 @@
                                                         <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                     </td>
                                                 </tr>
-                                                <tr id="add-template5">
+                                                <tr class="RowCal4" id="add-template5">
                                                     <td>
                                                         <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                     </td>
