--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -585,7 +585,7 @@
                                                         <input id="JobID" type="text" value="" class="tdID" disabled />
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
+                                                        <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft" disabled>
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtAmount" class="Amoun text-size180 textright">
@@ -608,7 +608,7 @@
                                                         <input id="JobID" type="text" value="" class="tdID" disabled />
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
+                                                        <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft" disabled>
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtAmount" class="Amoun text-size180 textright">
@@ -654,10 +654,10 @@
                                                         <input id="JobID" type="text" value="" class="tdID" disabled />
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
+                                                        <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft" disabled>
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
+                                                        <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft" disabled>
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtAmount" class="Amount text-size165 textright">
@@ -680,10 +680,10 @@
                                                         <input id="JobID" type="text" value="" class="tdID" disabled />
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
+                                                        <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft" disabled>
                                                     </td>
                                                     <td>
-                                                        <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
+                                                        <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft" disabled>
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtAmount" class="Amount text-size165 textright">
