--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -571,7 +571,7 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
+                                                            <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft" disabled>
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" class="Amount text-size180 textright">
@@ -591,7 +591,7 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtSaleOrderNo"  class="SaleOrderNo text-size180 textleft">
+                                                            <input type="text" id="txtSaleOrderNo"  class="SaleOrderNo text-size180 textleft" disabled>
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" class="Amoun text-size180 textright">
@@ -634,10 +634,10 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
+                                                            <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft" disabled>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
+                                                            <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft" disabled>
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" class="Amount text-size165 textright">
@@ -657,10 +657,10 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
+                                                            <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft" disabled>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
+                                                            <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft" disabled>
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" class="Amount text-size165 textright">
@@ -703,10 +703,10 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtReceiptNo" class="ReceiptNo text-size165 textleft">
+                                                            <input type="text" id="txtReceiptNo" class="ReceiptNo text-size165 textleft" disabled>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
+                                                            <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft" disabled>
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" class="Amount text-size165 textright">
@@ -726,10 +726,10 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtReceiptNo" class="ReceiptNo text-size165 textleft">
+                                                            <input type="text" id="txtReceiptNo" class="ReceiptNo text-size165 textleft" disabled>
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
+                                                            <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft" disabled>
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" class="Amount text-size165 textright">
