--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -268,13 +268,13 @@
                                                         <th colspan="2"></th>
                                                     </tr>
                                                 </thead>
-                                                <tfoot id="tBodyRowExpense">
+                                                <tfoot>
                                                     <tr>
                                                         <td colspan="6" class="textalign">Total</td>
                                                         <td colspan="3"><input id="txtTotalExpense" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                     </tr>
                                                 </tfoot>
-                                                <tbody>
+                                                <tbody id="tBodyRowExpense">
                                                     <tr class="RowCal1">
                                                         <td>
                                                             <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
