--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -571,7 +571,7 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft" disabled>
+                                                            <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" class="Amount text-size180 textright">
@@ -591,7 +591,7 @@
                                                             <input id="No" type="text" value="" class="tdno" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtSaleOrderNo"  class="SaleOrderNo text-size180 textleft" disabled>
+                                                            <input type="text" id="txtSaleOrderNo"  class="SaleOrderNo text-size180 textleft">
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtAmount" class="Amoun text-size180 textright">
